[gd_scene load_steps=2 format=2]

[ext_resource path="res://scene/main_menu.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -97.0
margin_top = -10.0
margin_right = 97.0
margin_bottom = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartDebug" type="Button" parent="MainMenu"]
margin_left = 54.0
margin_right = 140.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Start Debug"

[node name="New" type="Button" parent="MainMenu"]
margin_left = 56.0
margin_top = 24.0
margin_right = 138.0
margin_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "New Game"

[node name="Load" type="Button" parent="MainMenu"]
margin_left = 55.0
margin_top = 48.0
margin_right = 139.0
margin_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Load Game"

[node name="Option" type="Button" parent="MainMenu"]
margin_left = 65.0
margin_top = 72.0
margin_right = 128.0
margin_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Options"

[node name="Exit" type="Button" parent="MainMenu"]
margin_left = 79.0
margin_top = 96.0
margin_right = 114.0
margin_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Exit"

[node name="OptionMenu" type="VBoxContainer" parent="."]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="TabContainer" parent="OptionMenu"]
margin_right = 614.0
margin_bottom = 336.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Audio" type="ScrollContainer" parent="OptionMenu/PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="OptionMenu/PanelContainer/Audio"]
margin_right = 606.0
margin_bottom = 78.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="OptionMenu/PanelContainer/Audio/VBoxContainer"]
margin_right = 606.0
margin_bottom = 38.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OptionMenu/PanelContainer/Audio/VBoxContainer/VBoxContainer"]
margin_right = 606.0
margin_bottom = 14.0
text = "Enable something..."

[node name="AnOption" type="CheckBox" parent="OptionMenu/PanelContainer/Audio/VBoxContainer/VBoxContainer"]
margin_top = 14.0
margin_right = 606.0
margin_bottom = 38.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="OptionMenu/PanelContainer/Audio/VBoxContainer"]
margin_top = 48.0
margin_right = 606.0
margin_bottom = 78.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="OptionMenu/PanelContainer/Audio/VBoxContainer/HBoxContainer"]
margin_right = 606.0
margin_bottom = 14.0
text = "Sound maybe?"

[node name="HSlider" type="HSlider" parent="OptionMenu/PanelContainer/Audio/VBoxContainer/HBoxContainer"]
margin_top = 14.0
margin_right = 606.0
margin_bottom = 30.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.1
tick_count = 11
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="OptionMenu"]
margin_top = 340.0
margin_right = 614.0
margin_bottom = 360.0

[node name="Button" type="Button" parent="OptionMenu/HBoxContainer"]
margin_right = 54.0
margin_bottom = 20.0
text = "Return"

[node name="LoadMenu" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[connection signal="pressed" from="MainMenu/StartDebug" to="." method="_on_StartDebug_pressed"]
[connection signal="pressed" from="MainMenu/New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="MainMenu/Option" to="." method="_on_Option_pressed"]
[connection signal="pressed" from="MainMenu/Exit" to="." method="_on_Exit_pressed"]
